--- a/static/deps/css/style.css
+++ b/static/deps/css/style.css
@@ -1,4 +1,3 @@
-
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -26,6 +25,7 @@ ul{
     justify-content: space-between;
     width: 100%;
     height: 100%;
+
 }
 
 .content {
@@ -49,14 +49,16 @@ footer{
     border-radius: 10px;
 
 }
+.row .justify-content-center{
+    width: 100%;
+    margin: 0 !important;
+}
 .log-in-btn {
-    background-color: #007BFF;
     border: none;
     color: white;
     cursor: pointer;
     border-radius: 12px;
-    height: 24px;
-    width: 80px;
+    padding: 8px ;
 }
 .crypto-list {
     max-width: 94%;
@@ -137,7 +139,7 @@ footer{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 16px 0;
+    padding: 16px 100px;
     width: 100%;
 }
 .pagination{
@@ -205,6 +207,94 @@ button[type="submit"] {
 }
 .dropdown-item:focus, .dropdown-item:hover {
     background-color: #2b2f32 !important;
+}
+.coin_interaction button{
+    padding: 10px 20px;
+    background-color: #007BFF;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+.coin_interaction button:hover{
+    background-color: #0056b3;
+}
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 72%;
+  /*height: 100%;*/
+  background-color: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+    background-color: white;
+    /*padding: 20px;*/
+    border-radius: 4px;
+    text-align: center;
+    width: 40% !important;
+    box-sizing: border-box;
+    padding: 24px;
+    justify-content: center;
+    margin: 20vh auto 0 auto;
+}
+
+.close-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    border-radius: 12px;
+    width: 32px;
+    height: 27px;
+
+}
+.test-btn{
+    width: 100px !important;
+
+}
+.modal-content{
+    max-width: 400px;
+}
+.add_coin_input{
+    width: 80%;
+    max-width: 200px;
+}
+.form-select{
+    margin: 0 auto;
+    width: 85%;
+    max-width: 250px;
+}
+.index{
+    width: 16px;
+}
+#customCoinForm div div{
+    margin: 12px 0 !important;
+}
+#customCoinForm button{
+    width: 100px;
+    border-radius: 20px;
+    margin-right: 10px;
+    margin-bottom: 8px;
+}
+#openModalBtn{
+    height: 45px ;
+}
+
+#openModalBtn, .log-in-btn, #openModalBtnAdmin{
+    background-color: #007BFF !important;
+    width: 175px;
+    height: 45px ;
+}
+#openModalBtn:hover, .log-in-btn:hover, #openModalBtnAdmin:hover{
+    color: var(--bs-btn-hover-color) !important;
+    background-color: var(--bs-btn-hover-bg) !important;
+    border-color: var(--bs-btn-hover-border-color) !important;
 }
 @media (min-width: 992px) {
     .container {
