--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-	    <div class="row">
+	    <div class="row" style="margin: 0 !important;">
         <div class="container mt-5">
             <div class="row" style="justify-content: center;">
                 <!-- Профиль с данными пользователя -->
@@ -11,7 +11,7 @@
                         <h3 class="text-center mb-4">Profile</h3>
                         <form action="{% url 'user:profile' %}" method="post" enctype="multipart/form-data">
                             {% csrf_token %}
-                            <div class="row" style="margin: 0 auto;">
+                            <div class="row" style="margin: 0 !important;">
                             <div class="col-md-12 mb-3 text-center">
                                 {% if  user.image %}
                                     <img src="{{ user.image.url }}"
