--- a/static/deps/css/coin.css
+++ b/static/deps/css/coin.css
@@ -206,11 +206,6 @@ ul {
     color: #28a745; /* Зелений колір */
 }
 
-
-
-
-
-
 .market-info {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr; /* Три колонки для трьох секцій */
@@ -285,4 +280,38 @@ ul {
 }
 .coin_logo {
     height: 100%;
+}
+.modal-edit{
+    max-height: 80%;
+    background-color: white;
+    border-radius: 12px;
+    width: 40% !important;
+    box-sizing: border-box;
+    padding: 24px;
+    justify-content: center;
+    max-width: 400px;
+    overflow-y: auto;
+}
+.coin-modal-header-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+.coin-modal-header-container .close-btn{
+    top: 0;
+    text-align: center;
+}
+.modal{
+     position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.5); /* Напівпрозоре тло */
+    z-index: 1050;
+    overflow: hidden; /* Вимикаємо скрол сторінки */
 }
