--- a/templatesFrontEnd/css/coin.css
+++ b/templatesFrontEnd/css/coin.css
@@ -107,3 +107,33 @@ ul {
 .coin-info-container{
     display: flex; align-items: center; justify-content: start; flex-direction: row;
 }
+
+/*  modal   */
+.modal {
+    display: none; /* Приховане за замовчуванням */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+}
+.modal-content {
+    background: white;
+    padding: 20px;
+    border-radius: 8px;
+    text-align: center;
+}
+.close-btn {
+    float: right;
+    cursor: pointer;
+    margin-top: 10px;
+    padding: 10px 20px;
+    background-color: #f44336;
+    font-size: 18px !important;
+    color: white;
+    border: none;
+    border-radius: 5px;
+}
